step-io-macros/tests/ui/simple_missing_pass.stderr
error: missing `pass = ...`
 --> tests/ui/simple_missing_pass.rs:5:1
  |
5 | #[step_entity(name = "FOO")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `step_entity` (in Nightly builds, run with -Z macro-backtrace for more info)
