step-io-macros/tests/ui/simple_missing_pass.rs
use step_io_macros::step_entity;

struct Handler;

#[step_entity(name = "FOO")]
impl Handler {}

fn main() {}
